--- a/src/app/edit-student/edit-student.component.html
+++ b/src/app/edit-student/edit-student.component.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
               <div class="col-md-12 mb-3">
-                <label>membres</label>
+                <label>Membres</label>
                 <input type="membres" formControlName="membres" class="form-control" required>
                 <p *ngIf="membres.touched && membres.invalid" class="error"><sup>*</sup>Veuillez encoder au moins un autre membres</p>
                 <p *ngIf="membres.errors?.pattern" class="error"><sup>*</sup>Ajouter un membre non existant ?</p>
