--- a/src/app/students-list/students-list.component.html
+++ b/src/app/students-list/students-list.component.html
@@ -32,7 +32,7 @@
           <th scope="col">Student Id</th>
           <th scope="col">Date</th>
           <th scope="col">Durée</th>
-          <th scope="col">membres</th>
+          <th scope="col">Membres</th>
           <th scope="col">Mobile number</th>
           <th class="text-center" scope="col">Edit</th>
         </tr>
