--- a/src/app/edit-student/edit-student.component.html
+++ b/src/app/edit-student/edit-student.component.html
@@ -36,15 +36,32 @@
                 <p *ngIf="membres.touched && membres.invalid" class="error"><sup>*</sup>Veuillez encoder au moins un autre membres</p>
                 <p *ngIf="membres.errors?.pattern" class="error"><sup>*</sup>Ajouter un membre non existant ?</p>
               </div>
-              <div class="col-md-12 mb-3">
-                <label>Mobile number</label>
-                <input type="text" formControlName="mobileNumber" class="form-control" required>
-                <p *ngIf="mobileNumber.touched && mobileNumber.invalid" class="error"><sup>*</sup>Please provide
-                  contact
-                  number</p>
-                <p *ngIf="mobileNumber.errors?.pattern" class="error"><sup>*</sup>Use numbers only
-                  number</p>
-              </div>
+                      <div class="col-md-12 mb-3">
+          <label>Ojectif(s)</label>
+          <input type="text" formControlName="objectifs" class="form-control" required>
+          <!-- Showing errors using getter method -->
+
+          <p *ngIf="objectifs.errors?.minlength" class="error"><sup>*</sup>Il faut au mons deux lettres</p>
+        </div>
+
+            
+        <div class="col-md-12 mb-3">
+          <label>Tâche(s)</label>
+          <input type="text" formControlName="taches" class="form-control" required>
+          <!-- Showing errors using getter method -->
+          <p *ngIf="taches.touched && taches.invalid" class="error"><sup>*</sup>Veuillez encoder au moins une tâche</p>
+          
+        </div>
+
+           
+        <div class="col-md-12 mb-3">
+          <label>Décision(s)</label>
+          <input type="text" formControlName="decision" class="form-control" required>
+          <!-- Showing errors using getter method -->
+          <p *ngIf="decision.touched && decision.invalid" class="error"><sup>*</sup>Veuillez encoder au moins une décision</p>
+          
+        </div>
+
             </div>
             <div class="form-group text-right">
               <button type="submit" class="btn btn-success btn-block" [disabled]="!editForm.valid">Modifier</button>
