--- a/src/app/add-student/add-student.component.html
+++ b/src/app/add-student/add-student.component.html
@@ -38,7 +38,7 @@
           <label>Objectif(s)</label>
           <input type="text" formControlName="objectifs" class="form-control" required>
           <!-- Showing errors using getter method -->
-          <p *ngIf="objectifs.touched && ojectifs.invalid" class="error"><sup>*</sup>Veuillez encoder au moins une tâche</p>
+          <!--<p *ngIf="objectifs.touched && objectifs.invalid" class="error"><sup>*</sup>Veuillez encoder au moins une tâche</p>-->
           <p *ngIf="objectifs.errors?.minlength" class="error"><sup>*</sup>Il faut au moins deux lettres</p>
         </div>
 
@@ -64,7 +64,7 @@
 
       <div class="form-group text-right">
         <button type="button" class="btn btn-secondary gap-right" (click)="ResetForm()">Reset</button>
-        <button type="submit" class="btn btn-success" [disabled]="studentForm.valid">Ajout Projet</button>
+        <button type="submit" class="btn btn-success" [disabled]="!studentForm.valid">Ajout Projet</button>
       </div>
 
     </div>
