--- a/src/app/edit-student/edit-student.component.html
+++ b/src/app/edit-student/edit-student.component.html
@@ -38,10 +38,10 @@
               </div>
                       <div class="col-md-12 mb-3">
           <label>Ojectif(s)</label>
-          <input type="text" formControlName="objectifs" class="form-control" required>
+          <input type="text" formControlName="buts" class="form-control" required>
           <!-- Showing errors using getter method -->
 
-          <p *ngIf="objectifs.errors?.minlength" class="error"><sup>*</sup>Il faut au mons deux lettres</p>
+          <p *ngIf="buts.errors?.minlength" class="error"><sup>*</sup>Il faut au mons deux lettres</p>
         </div>
 
             
@@ -56,9 +56,9 @@
            
         <div class="col-md-12 mb-3">
           <label>Décision(s)</label>
-          <input type="text" formControlName="decision" class="form-control" required>
+          <input type="text" formControlName="decisions" class="form-control" required>
           <!-- Showing errors using getter method -->
-          <p *ngIf="decision.touched && decision.invalid" class="error"><sup>*</sup>Veuillez encoder au moins une décision</p>
+          <p *ngIf="decisions.touched && decisions.invalid" class="error"><sup>*</sup>Veuillez encoder au moins une décision</p>
           
         </div>
 
