--- a/src/app/students-list/students-list.component.html
+++ b/src/app/students-list/students-list.component.html
@@ -47,7 +47,7 @@
           <td>{{student.projectDate}} </td>
           <td>{{student.projetLenght}}</td>
           <td>{{student.membres}}</td>
-          <td>{{student.objectifs}}</td>
+          <td>{{student.buts}}</td>
           <td>{{student.taches}}</td>
           <td>{{student.decisions}}</td>
           <td class="text-center action-block">
