--- a/src/app/add-student/add-student.component.html
+++ b/src/app/add-student/add-student.component.html
@@ -19,7 +19,7 @@
 
         <div class="col-md-12 mb-3">
           <label>Durée</label>
-          <input type="text" formControlName="projetLenght" class="form-control">
+          <input type="text" formControlName="projetLenght" class="form-control" required>
           <!-- Showing errors using getter method -->
           <p *ngIf="projetLenght.touched && projetLenght.invalid" class="error"><sup>*</sup>Veuillez entrer la durée du projet en nombre de périodes</p>
           <p *ngIf="projetLenght.errors?.minlength" class="error"><sup>*</sup>Il faut que ce soit une durée en nombre de périodes</p>
