--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
 
         <!-- Footer -->
         <footer>
-         BossCool : Mieux coopérer pour encore mieux bosser
+         BossCool : Mieux coopérer pour encore mieux bosser, c'est cool !
  
         </footer>
       </div>
